[package]
name = "input_yew"
version = "0.1.1"
description = "A feature-rich accessible custom reusable input functional component for the Yew framework."
license = "Apache-2.0"
keywords = ["input", "yew", "rust", "input_yew"]
repository = "https://github.com/wiseaidev/input-yew"
documentation = "https://docs.rs/input_yew/"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version = "0.3.64", default-features = false }
yew = { version = "0.20.0", default-features = false }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "symbols"
